@@ -6,6 +6,7 @@ exist in matlab(TM) but have proven themselves to be useful nonetheless.
 The majority of them, however, have matlab analogs
 
 _Plotting commands
+  acorr     - plot the autocorrelation function
   annotate  - annotate something in the figure
   arrow     - add an arrow to the axes
   axes      - Create a new axes
@@ -79,8 +80,8 @@ _Plotting commands
   table    - add a table to the plot
   text     - add some text at location x,y to the current axes
   thetagrids - customize the radial theta grids and labels for polar
-
   title    - add a title to the current axes
+  xcorr   - plot the autocorrelation function of x and y  
   xlim     - set/get the xlimits
   ylim     - set/get the ylimits
   xticks   - set/get the xticks
@@ -1528,6 +1529,27 @@ if Axes.pcolor_classic.__doc__ is not None:
 ### Do not edit below this point
 # This function was autogenerated by boilerplate.py.  Do not edit as
 # changes will be lost
+def acorr(*args, **kwargs):
+    # allow callers to override the hold state by passing hold=True|False
+    b = ishold()
+    h = popd(kwargs, 'hold', None)
+    if h is not None:
+        hold(h)
+    try:
+        ret =  gca().acorr(*args, **kwargs)
+        draw_if_interactive()
+    except:
+        hold(b)
+        raise
+    
+    hold(b)
+    return ret
+if Axes.acorr.__doc__ is not None:
+    acorr.__doc__ = dedent(Axes.acorr.__doc__) + """
+Addition kwargs: hold = [True|False] overrides default hold state"""
+
+# This function was autogenerated by boilerplate.py.  Do not edit as
+# changes will be lost
 def arrow(*args, **kwargs):
     # allow callers to override the hold state by passing hold=True|False
     b = ishold()
@@ -1540,7 +1562,7 @@ def arrow(*args, **kwargs):
     except:
         hold(b)
         raise
-
+    
     hold(b)
     return ret
 if Axes.arrow.__doc__ is not None:
@@ -1561,7 +1583,7 @@ def axhline(*args, **kwargs):
     except:
         hold(b)
         raise
-
+    
     hold(b)
     return ret
 if Axes.axhline.__doc__ is not None:
@@ -1582,7 +1604,7 @@ def axhspan(*args, **kwargs):
     except:
         hold(b)
         raise
-
+    
     hold(b)
     return ret
 if Axes.axhspan.__doc__ is not None:
@@ -1603,7 +1625,7 @@ def axvline(*args, **kwargs):
     except:
         hold(b)
         raise
-
+    
     hold(b)
     return ret
 if Axes.axvline.__doc__ is not None:
@@ -1624,7 +1646,7 @@ def axvspan(*args, **kwargs):
     except:
         hold(b)
         raise
-
+    
     hold(b)
     return ret
 if Axes.axvspan.__doc__ is not None:
@@ -1645,7 +1667,7 @@ def bar(*args, **kwargs):
     except:
         hold(b)
         raise
-
+    
     hold(b)
     return ret
 if Axes.bar.__doc__ is not None:
@@ -1666,7 +1688,7 @@ def barh(*args, **kwargs):
     except:
         hold(b)
         raise
-
+    
     hold(b)
     return ret
 if Axes.barh.__doc__ is not None:
@@ -1687,7 +1709,7 @@ def broken_barh(*args, **kwargs):
     except:
         hold(b)
         raise
-
+    
     hold(b)
     return ret
 if Axes.broken_barh.__doc__ is not None:
@@ -1708,7 +1730,7 @@ def boxplot(*args, **kwargs):
     except:
         hold(b)
         raise
-
+    
     hold(b)
     return ret
 if Axes.boxplot.__doc__ is not None:
@@ -1729,7 +1751,7 @@ def cohere(*args, **kwargs):
     except:
         hold(b)
         raise
-
+    
     hold(b)
     return ret
 if Axes.cohere.__doc__ is not None:
@@ -1750,7 +1772,7 @@ def clabel(*args, **kwargs):
     except:
         hold(b)
         raise
-
+    
     hold(b)
     return ret
 if Axes.clabel.__doc__ is not None:
@@ -1813,7 +1835,7 @@ def csd(*args, **kwargs):
     except:
         hold(b)
         raise
-
+    
     hold(b)
     return ret
 if Axes.csd.__doc__ is not None:
@@ -1834,7 +1856,7 @@ def errorbar(*args, **kwargs):
     except:
         hold(b)
         raise
-
+    
     hold(b)
     return ret
 if Axes.errorbar.__doc__ is not None:
@@ -1855,7 +1877,7 @@ def fill(*args, **kwargs):
     except:
         hold(b)
         raise
-
+    
     hold(b)
     return ret
 if Axes.fill.__doc__ is not None:
@@ -1876,7 +1898,7 @@ def hist(*args, **kwargs):
     except:
         hold(b)
         raise
-
+    
     hold(b)
     return ret
 if Axes.hist.__doc__ is not None:
@@ -1897,7 +1919,7 @@ def hlines(*args, **kwargs):
     except:
         hold(b)
         raise
-
+    
     hold(b)
     return ret
 if Axes.hlines.__doc__ is not None:
@@ -1939,7 +1961,7 @@ def loglog(*args, **kwargs):
     except:
         hold(b)
         raise
-
+    
     hold(b)
     return ret
 if Axes.loglog.__doc__ is not None:
@@ -2002,7 +2024,7 @@ def pie(*args, **kwargs):
     except:
         hold(b)
         raise
-
+    
     hold(b)
     return ret
 if Axes.pie.__doc__ is not None:
@@ -2023,7 +2045,7 @@ def plot(*args, **kwargs):
     except:
         hold(b)
         raise
-
+    
     hold(b)
     return ret
 if Axes.plot.__doc__ is not None:
@@ -2044,7 +2066,7 @@ def plot_date(*args, **kwargs):
     except:
         hold(b)
         raise
-
+    
     hold(b)
     return ret
 if Axes.plot_date.__doc__ is not None:
@@ -2065,7 +2087,7 @@ def psd(*args, **kwargs):
     except:
         hold(b)
         raise
-
+    
     hold(b)
     return ret
 if Axes.psd.__doc__ is not None:
@@ -2107,7 +2129,7 @@ def semilogx(*args, **kwargs):
     except:
         hold(b)
         raise
-
+    
     hold(b)
     return ret
 if Axes.semilogx.__doc__ is not None:
@@ -2128,7 +2150,7 @@ def semilogy(*args, **kwargs):
     except:
         hold(b)
         raise
-
+    
     hold(b)
     return ret
 if Axes.semilogy.__doc__ is not None:
@@ -2191,7 +2213,7 @@ def stem(*args, **kwargs):
     except:
         hold(b)
         raise
-
+    
     hold(b)
     return ret
 if Axes.stem.__doc__ is not None:
@@ -2212,7 +2234,7 @@ def vlines(*args, **kwargs):
     except:
         hold(b)
         raise
-
+    
     hold(b)
     return ret
 if Axes.vlines.__doc__ is not None:
@@ -2275,11 +2297,32 @@ def quiverkey(*args, **kwargs):
     except:
         hold(b)
         raise
-
+    
     hold(b)
     return ret
 if Axes.quiverkey.__doc__ is not None:
     quiverkey.__doc__ = dedent(Axes.quiverkey.__doc__) + """
+Addition kwargs: hold = [True|False] overrides default hold state"""
+
+# This function was autogenerated by boilerplate.py.  Do not edit as
+# changes will be lost
+def xcorr(*args, **kwargs):
+    # allow callers to override the hold state by passing hold=True|False
+    b = ishold()
+    h = popd(kwargs, 'hold', None)
+    if h is not None:
+        hold(h)
+    try:
+        ret =  gca().xcorr(*args, **kwargs)
+        draw_if_interactive()
+    except:
+        hold(b)
+        raise
+    
+    hold(b)
+    return ret
+if Axes.xcorr.__doc__ is not None:
+    xcorr.__doc__ = dedent(Axes.xcorr.__doc__) + """
 Addition kwargs: hold = [True|False] overrides default hold state"""
 
 # This function was autogenerated by boilerplate.py.  Do not edit as
